--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <br>     
             <div class="row "> 
                 <div class="col-md-8 g-0">
-                    <img class="img1" src="img/clsico111.jpg">
+                    <img class="img1" src="/img/clsico111.jpg">
                 </div>               
                 <div class="col-md-4 g-0">
                     <div class="Advertisement">
@@ -89,7 +89,7 @@
                 <div class="row "> 
                     <div class="col-md-6">
                         <div class="col-md-12">
-                            <img class="img-fluid" src="img/Plymouth-Barracuda-1970-1024x576.jpg">
+                            <img class="img-fluid" src="/img/Plymouth-Barracuda-1970-1024x576.jpg">
                         </div>               
                         <div class="col-md-12 ">
                             <div class="Advertisement">
