--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <div class="row "> 
                     <div class="col-md-6">
                         <div class="col-md-12">
-                            <img class="img-fluid" src="/img/Plymouth-Barracuda-1970-1024x576.jpg">
+                            <img class="img-fluid" src="img/Plymouth-Barracuda-1970-1024x576.jpg">
                         </div>               
                         <div class="col-md-12 ">
                             <div class="Advertisement">
@@ -103,7 +103,7 @@
                     
                     <div class="col-md-6">
                         <div class="col-md-12 ">
-                            <img class="img-fluid" src="/img/Chevrolet-Camaro-SS-1969-1024x576.jpg">
+                            <img class="img-fluid" src="img/Chevrolet-Camaro-SS-1969-1024x576.jpg">
                         </div>               
                         <div class="col-md-12 ">
                             <div class="Advertisement">
@@ -122,7 +122,7 @@
                 <div class="row "> 
                     <div class="col-md-4">
                         <div class="col-md-12">
-                            <img class="img-fluid" src="/img/Dodge-Charger-Daytona-1969-1024x683.jpg">
+                            <img class="img-fluid" src="img/Dodge-Charger-Daytona-1969-1024x683.jpg">
                         </div>               
                         <div class="col-md-12 ">
                             <div class="Advertisement">
@@ -136,7 +136,7 @@
                     
                     <div class="col-md-4">
                         <div class="col-md-12 ">
-                            <img class="img-fluid" src="/img/pickjup1.jpg">
+                            <img class="img-fluid" src="img/pickjup1.jpg">
                         </div>               
                         <div class="col-md-12 ">
                             <div class="Advertisement">
@@ -149,7 +149,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="col-md-12 ">
-                            <img class="img-fluid" src="/img/z24 nissan.jpg">
+                            <img class="img-fluid" src="img/z24 nissan.jpg">
                         </div>               
                         <div class="col-md-12 ">
                             <div class="Advertisement">
@@ -173,7 +173,7 @@
                 <div class="row">
                     <div class="col-4">
                         <div class="col-12">
-                            <img class="img-fluid rounded animated-img" src="/img/virtudes-profesional-taller.jpg">
+                            <img class="img-fluid rounded animated-img" src="img/virtudes-profesional-taller.jpg">
                         </div>
                         <div class="col-12">
                             <div class="category">
@@ -184,7 +184,7 @@
                     </div>
                     <div class="col-4">
                         <div class="col-12">
-                            <img class="img-fluid rounded" src="/img/refacciones1.jpg">
+                            <img class="img-fluid rounded" src="img/refacciones1.jpg">
                         </div>
                         <div class="col-12">
                             <div class="category">
@@ -195,7 +195,7 @@
                     </div>
                     <div class="col-4">
                         <div class="col-12">
-                            <img class="img-fluid rounded" src="/img/Repintado-automotriz-con-colores-sólidos-vs-Metalizados.jpg">
+                            <img class="img-fluid rounded" src="img/Repintado-automotriz-con-colores-sólidos-vs-Metalizados.jpg">
                         </div>
                         <div class="col-12">
                             <div class="category">
