--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
     <head>   
         <meta charset="UTF-8"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>AgenClssc - Inicio</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -211,8 +210,8 @@
             </div>
             <br>
             
-            <script src="js/app.js"></script>
-            <script src="js/bootstrap.bundle.min.js"></script>
+            <script src="JS/"></script>
+            <script src="JS/bootstrap.bundle.min.js"></script>
 
     
     </body>
